--- a/sleep/views/script_step_views.xml
+++ b/sleep/views/script_step_views.xml
@@ -15,7 +15,7 @@
                         <field name="name"/>
                         <field name="user_id"/>
                         <field name="step_ids">
-                            <tree default_order="sequence, id" decoration-success="state in ('running', 'waiting')" decoration-muted="state == 'not_running'" editable="bottom">
+                            <tree default_order="sequence, id" decoration-success="state in ('running', 'waiting')" decoration-muted="state == 'not_running'">
                                 <field name="sequence" widget="handle" nolabel="1"/>
                                 <field name="state"/>
                                 <field name="name"/>
@@ -25,12 +25,15 @@
                             </tree>
                             <form>
                                 <header>
-                                    <field name="state" widget="statusbar"/>
+                                    <field name="state" widget="statusbar" options="{'clickable': '1'}"/>
+                                    <button name="run" type="object" string="Run"/>
                                 </header>
                                 <group>
                                     <field name="name"/>
                                     <field name="message"/>
-                                    <field name="next_step_ids"/>
+                                    <field name="user_answer_type"/>
+                                    <field name="code" widget="code" options="{'mode': 'python'}"/>
+                                    <field name="next_step_ids" widget="many2many_tags"/>
                                 </group>
                             </form>
                         </field>
