--- a/sleep/views/article_views.xml
+++ b/sleep/views/article_views.xml
@@ -6,6 +6,7 @@
         <field name="model">article</field>
         <field name="arch" type="xml">
             <form create="0" delete="0">
+                <field name="user_ids" invisible="1"/>
                 <field name="name" invisible="1"/>
                 <field name="text" readonly="1"/>
             </form>
@@ -16,8 +17,8 @@
         <field name="name">article.tree</field>
         <field name="model">article</field>
         <field name="arch" type="xml">
-            <tree create="1" decoration-muted="state == 'not_running'">
-                <field name="user_ids"/>
+            <tree create="1" decoration-muted="is_available == False" decoration-primary="is_available == True">
+                <field name="is_available" invisible="1"/>
                 <field name="name"/>
             </tree>
         </field>
