--- a/app_theme/static/src/css/app_theme.css
+++ b/app_theme/static/src/css/app_theme.css
@@ -3,16 +3,16 @@
   display:none !important;
 }
 
-
 /* Disable main button */
 .o_menu_toggle {
     display: none !important;
 }
 /* Added left padding for menu where main button is disabled */
 .o_menu_sections {
-    padding-left: 8px !important;
+    /*padding-left: 8px !important;*/
+    width: 100% !important;
+    justify-content: space-around !important;
 }
-
 
 /* Added red color for heart icon */
 .fa-heart{
@@ -41,26 +41,6 @@
     display: none !important;
 }
 
-
-/* Navbar */
-.o_main_navbar {
-    background-color: transparent;
-    position: fixed;
-    right: 0;
-    z-index: 100;
-}
-/* Styles for control panel  */
-.o_control_panel {
-    background-color: transparent;
-    backdrop-filter: blur(30px);
-    box-shadow: 0 5px 10px 3px rgba(0, 0, 0, .05);
-    z-index: 90;
-    position: fixed;
-    left: 0;
-    right: 0;
-    top: 0 !important;
-}
-
 /* Disable border where click on kanban record */
 .o_kanban_renderer .oe_kanban_card:focus-visible.oe_kanban_global_click, .o_kanban_renderer .oe_kanban_card:focus-visible.oe_kanban_global_click_edit, .o_kanban_renderer .oe_kanban_card:focus-visible .oe_kanban_global_click, .o_kanban_renderer .oe_kanban_card:focus-visible .oe_kanban_global_click_edit, .o_kanban_renderer .oe_kanban_card:focus-within.oe_kanban_global_click, .o_kanban_renderer .oe_kanban_card:focus-within.oe_kanban_global_click_edit, .o_kanban_renderer .oe_kanban_card:focus-within .oe_kanban_global_click, .o_kanban_renderer .oe_kanban_card:focus-within .oe_kanban_global_click_edit, .o_kanban_renderer .o_kanban_record:focus-visible.oe_kanban_global_click, .o_kanban_renderer .o_kanban_record:focus-visible.oe_kanban_global_click_edit, .o_kanban_renderer .o_kanban_record:focus-visible .oe_kanban_global_click, .o_kanban_renderer .o_kanban_record:focus-visible .oe_kanban_global_click_edit, .o_kanban_renderer .o_kanban_record:focus-within.oe_kanban_global_click, .o_kanban_renderer .o_kanban_record:focus-within.oe_kanban_global_click_edit, .o_kanban_renderer .o_kanban_record:focus-within .oe_kanban_global_click, .o_kanban_renderer .o_kanban_record:focus-within .oe_kanban_global_click_edit {
      outline: thin solid rgba(255, 0, 0, 0) !important;
@@ -86,6 +66,15 @@
     background-color: transparent !important;
 }
 
+.o_list_renderer .o_list_table > thead > tr > :first-child, .o_list_renderer .o_list_table > tbody > tr > :first-child, .o_list_renderer .o_list_table > tfoot > tr > :first-child {
+    padding-left: 0.3rem;
+}
+
+.o_form_view.o_xxs_form_view .o_inner_group .o_wrap_field .o_cell .o_field_widget {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
 .o_list_renderer {
-    padding-top: 65px;
+    padding-top: 60px;
 }
