--- a/sleep/views/article_views.xml
+++ b/sleep/views/article_views.xml
@@ -17,10 +17,32 @@
         <field name="name">article.tree</field>
         <field name="model">article</field>
         <field name="arch" type="xml">
-            <tree create="1" decoration-muted="is_available == False" decoration-primary="is_available == True">
-                <field name="is_available" invisible="1"/>
+            <tree create="0" export_xlsx="0" delete="0">
                 <field name="name"/>
             </tree>
+        </field>
+    </record>
+
+    <record id="article_kanban" model="ir.ui.view">
+        <field name="name">article.kanban</field>
+        <field name="model">article</field>
+        <field name="arch" type="xml">
+            <kanban create="0">
+                <field name="name"/>
+                <templates>
+                    <t t-name="kanban-box">
+                        <div t-attf-class="oe_kanban_global_click pt-3 pb-3">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col">
+                                        <field name="name"/>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </t>
+                </templates>
+            </kanban>
         </field>
     </record>
 
@@ -28,9 +50,10 @@
         <field name="name">Articles</field>
         <field name="res_model">article</field>
         <field name="type">ir.actions.act_window</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">kanban,form</field>
     </record>
 
-    <menuitem id="article_menu" name="Articles" parent="sleep_root_menu" sequence="2" action="article_action"/>
+    <menuitem id="article_menu" name="Articles" parent="sleep_root_menu" sequence="2" action="article_action" web_icon="fa-regular fa-newspaper"/>
+    <menuitem id="todo_menu" name="ToDo" parent="sleep_root_menu" sequence="4" action="article_action" web_icon="fa-regular fa-circle-check"/>
 
 </odoo>
