--- a/sleep/views/script_views.xml
+++ b/sleep/views/script_views.xml
@@ -14,10 +14,13 @@
                     <group>
                         <field name="name"/>
                         <field name="user_id"/>
+                        <field name="is_main"/>
+                        <field name="main_script_id" invisible="is_main == True"/>
+                        <field name="next_script_id"/>
                         <field name="step_ids">
                             <tree default_order="sequence, id" decoration-success="state in ('running', 'waiting')" decoration-muted="state == 'not_running'">
                                 <field name="sequence" widget="handle" nolabel="1"/>
-                                <field name="state"/>
+                                <field name="state" invisible="1"/>
                                 <field name="name"/>
                                 <field name="message"/>
                                 <field name="user_answer_type"/>
@@ -30,10 +33,11 @@
                                 </header>
                                 <group>
                                     <field name="name"/>
-                                    <field name="message"/>
+                                    <field name="message" widget="html" options="{'codeview': true}"/>
                                     <field name="user_answer_type"/>
-                                    <field name="code" widget="code" options="{'mode': 'python'}"/>
-                                    <field name="next_step_ids" widget="many2many_tags"/>
+<!--                                    <field name="code" widget="code" options="{'mode': 'python'}"/>-->
+                                    <field name="script_id" invisible="1"/>
+                                    <field name="next_step_ids" widget="many2many_tags" domain="[('script_id', '=', script_id)]"/>
                                 </group>
                             </form>
                         </field>
