--- a/sleep/views/ritual_views.xml
+++ b/sleep/views/ritual_views.xml
@@ -12,25 +12,24 @@
                         <span style="width: 35px !important;">Edit</span>
                         <field name="is_edit" string="Edit lines" widget="boolean_toggle"/>
                     </div>
-                    <field name="line_ids" string=" " readonly="0" invisible="is_edit == True">
-                        <tree create="0" delete="0" editable="top" default_order="sequence desc, id desc"
-                              decoration-muted="is_done == False" decoration-primary="is_done == True">
-                            <field name="is_done" string=" " nolabel="1" widget="boolean_sleep_icon"
+                    <field name="line_ids" string=" " readonly="1" invisible="is_edit == True">
+                        <tree default_order="sequence desc, id desc"
+                              decoration-muted="is_check == False" decoration-primary="is_check == True">
+                            <field name="is_check" nolabel="1" widget="boolean_sleep_icon"
                                    options="{'icon': 'fa-check rounded-circle', 'no_active_icon': 'rounded-circle'}"/>
-                            <field name="name" string="Tasks" readonly="1" class="text-left" nolabel="1"/>
+                            <field name="name" readonly="1" class="text-left" nolabel="1"/>
                         </tree>
                     </field>
-                    <field name="line_ids" string=" " readonly="0" invisible="is_edit == False">
-                        <tree create="1" editable="top" default_order="sequence desc, id desc">
+                    <label for="line_ids" string=" "/>
+                    <field name="line_ids" string="Line" nolabel="1" invisible="is_edit == False">
+                        <tree default_order="sequence desc, id desc">
+                            <control>
+                                <button name="add_line" string="Add line" class="btn-link" type="object"/>
+                            </control>
                             <field name="sequence" widget="handle" nolabel="1"/>
-                            <field name="name" string="Tasks" readonly="0" class="text-left" nolabel="1"/>
+                            <field name="name" readonly="0" class="text-left" nolabel="1"/>
                         </tree>
                     </field>
-<!--                    <label for="line_name" string=" "/>-->
-<!--                    <div class="o_row">-->
-<!--                        <field name="line_name" placeholder="Name"/>-->
-<!--                        <button name="add_line" string="ADD" type="object" class="btn-outline-primary"/>-->
-<!--                    </div>-->
                 </group>
             </form>
         </field>
