--- a/sleep/static/src/css/sleep.css
+++ b/sleep/static/src/css/sleep.css
@@ -43,7 +43,7 @@
     background-color: transparent !important;
     backdrop-filter: blur(30px) !important;
     -webkit-backdrop-filter: blur(30px) !important;
-    box-shadow: 0 5px 10px 3px rgba(0, 0, 0, .05) !important;
+    /*box-shadow: 0 5px 10px 3px rgba(0, 0, 0, .05) !important;*/
     position: fixed !important;
     z-index: 92 !important;
     left: 0 !important;
