--- a/sleep/views/ritual_views.xml
+++ b/sleep/views/ritual_views.xml
@@ -6,7 +6,11 @@
         <field name="model">ritual</field>
         <field name="arch" type="xml">
             <form js_class="ritual_form">
-                <div class="oe_read_only">
+                <field name="is_check" invisible="1"/>
+                <div class="oe_read_only" invisible="is_check == False">
+                    ✨ Ritual is done ✨
+                </div>
+                <div class="oe_read_only" invisible="is_check == True">
                     <field name="line_ids" nolabel="1" readonly="1">
                         <tree no_open="1" default_order="sequence desc, id desc"
                               decoration-muted="is_check == False" decoration-primary="is_check == True">
