--- a/sleep/views/settings_views.xml
+++ b/sleep/views/settings_views.xml
@@ -9,6 +9,7 @@
                 <group>
                     <field name="lang"/>
                     <field name="tz"/>
+                    <field name="time" widget="float_time"/>
                     <field name="color_scheme" widget="radio"/>
                     <a class="btn btn-link" href="/web/session/logout?redirect=/web">Logout</a>
                 </group>
