--- a/app_theme/static/src/css/app_theme.css
+++ b/app_theme/static/src/css/app_theme.css
@@ -66,7 +66,12 @@
     background-color: transparent !important;
 }
 
-.o_list_renderer .o_list_table > thead > tr > :first-child, .o_list_renderer .o_list_table > tbody > tr > :first-child, .o_list_renderer .o_list_table > tfoot > tr > :first-child {
+/*.o_list_renderer .o_list_table > thead > tr > :first-child, .o_list_renderer .o_list_table > tbody > tr > :first-child, .o_list_renderer .o_list_table > tfoot > tr > :first-child {*/
+/*    padding-left: 0.3rem;*/
+/*}*/
+
+/* Styles for left padding of rows in x2many fields (from odoo styles) */
+.o_field_x2many.o_field_x2many_list .o_list_renderer tr > :first-child {
     padding-left: 0.3rem;
 }
 
