--- a/sleep/views/ritual_views.xml
+++ b/sleep/views/ritual_views.xml
@@ -21,13 +21,13 @@
                     </field>
                 </div>
                 <div class="oe_edit_only">
-                    <field name="line_ids" nolabel="1" readonly="0">
-                        <tree no_open="1" default_order="sequence desc, id desc">
+                    <field name="line_ids" nolabel="1" readonly="0"  height="100px">
+                        <tree no_open="1" default_order="sequence desc, id desc"  height="100px">
                             <control>
                                 <button name="add_line" string="Add line" class="btn-link" type="object"/>
                             </control>
-                            <field name="sequence" widget="handle" nolabel="1"/>
-                            <field name="name" nolabel="1"/>
+                            <field name="sequence" widget="handle" nolabel="1" height="100px"/>
+                            <field name="name" nolabel="1"  height="100px"/>
                         </tree>
                     </field>
                 </div>
