--- a/sleep/static/src/css/sleep.scss
+++ b/sleep/static/src/css/sleep.scss
@@ -86,7 +86,8 @@ th[data-name="is_check"] {
    border-bottom-width: 1px !important;
 }
 .modal-body .o_list_renderer .ui-sortable {
-   border-width: 1px !important;
+   border-bottom-width: 1px !important;
+   border-top-width: 1px !important;
 }
 
 
