--- a/app_theme/static/src/css/app_theme.scss
+++ b/app_theme/static/src/css/app_theme.scss
@@ -150,6 +150,11 @@
   border: 0px !important;
 }
 
+
+.o_field_html a:not(.btn) {
+    color: $primary !important;
+}
+
 //.modal-body{
 //  border-radius: 30px !important;
 //}
