--- a/app_theme/static/src/css/app_theme.scss
+++ b/app_theme/static/src/css/app_theme.scss
@@ -155,6 +155,10 @@
     color: $primary !important;
 }
 
+.primary {
+    color: $primary !important;
+}
+
 //.modal-body{
 //  border-radius: 30px !important;
 //}
